--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
+    "postinstall": "rm -rf .next && next build"
   },
   "dependencies": {
     "next": "^13.4.0",
