--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "moonkey-website",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+"scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "postinstall": "rm -rf .next && next build"
+}
+
+
   },
   "dependencies": {
     "next": "^13.4.0",
