--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postinstall": "rm -rf .next && next build"
+    "postinstall": "rm -rf node_modules .next && npm install && next build"
   },
   "dependencies": {
-    "next": "^13.5.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "13.5.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "ethers": "^5.7.2",
     "tailwindcss": "^3.2.7",
     "autoprefixer": "^10.4.5",
@@ -19,6 +19,6 @@
   },
   "devDependencies": {
     "eslint": "^8.30.0",
-    "eslint-config-next": "^13.5.8"
+    "eslint-config-next": "13.5.8"
   }
 }
