--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postinstall": "rm -rf node_modules .next && npm install && next build"
+    "postinstall": "rm -rf .next && next build"
   },
   "dependencies": {
     "next": "13.5.8",
